--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to the website!</h1>
     <p>This is just a test.</p>
-    <p>Another Test</p>
+    <p>Another Test#2</p>
 </body>
 </html>
