--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to the website!</h1>
+    <h2>This is a test deploy</h2>
     <p>This is just a test.</p>
     <p>Another Test#2</p>
 </body>
